Fixed issue with MultiLineChart crashing application. Updated link on SummaryCard to the charts and numbers instead of the title. This follows the How to Use? and prevents unwanted click when interacting with dropdown card on mobile view.

--- a/src/components/SummaryCard/style.css
+++ b/src/components/SummaryCard/style.css
@@ -23,14 +23,14 @@
   height: 30px;
 }
 
-.summary-card-header-text:hover {
-  cursor: pointer;
-}
-
 .summary-data-wrapper {
   display: flex;
   width: 100%;
   align-items: center;
+}
+
+.summary-data-wrapper:hover {
+  cursor: pointer;
 }
 
 .summary-chart,
